--- a/layout/_partial/paginator.ejs
+++ b/layout/_partial/paginator.ejs
@@ -1,11 +1,13 @@
 <% if (page.total > 1){ %>
-  <nav class="pagination">
+  <nav class="flex justify-center my-12" aria-label="Pagination">
+    <div class="flex gap-2">
       <%- paginator({
-          // prev_text: "&laquo; Prev",
-          // next_text: "Next &raquo;"
-          prev_next: false,
+          prev_text: "&laquo; Prev",
+          next_text: "Next &raquo;",
+          prev_next: true,
           end_size: 1,
           mid_size: 2,
       }) %>
+    </div>
   </nav>
 <% } %>
